frontend/test/should_fail/inh_model_008.grg
model inh_model_008;

edge class A extends B;
edge class B extends C,D;
edge class D extends E;
edge class E extends A;
edge class C extends A;
